# WhatsAuto

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  components.json  deps.edn  package-lock.json  package.json  shadow-cljs.edn  tsconfig.json
.github/workflows/: ci.yml  release.yml
docs/: AI_PROVIDERS.md  ARCHITECTURE.md  DEVELOPER.md
scripts/: bundle-shadcn.js
src-node/: index.js  package.json
src-node/bridge/: args.js  websocket.js
src-node/src/: index.js
src-node/src/bridge/: args.js  websocket.js
src-node/src/whatsapp/: client.js  commands.js
src-node/whatsapp/: client.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 0001_initial.sql
src-tauri/src/: bridge.rs  lib.rs  main.rs
src-tauri/src/bridge/: mod.rs
src-tauri/src/commands/: ai.rs  chats.rs  contacts.rs  memory.rs  messages.rs  mod.rs  plugins.rs  rules.rs  scheduler.rs  settings.rs  templates.rs  whatsapp.rs
src-tauri/src/models/: ai.rs  chat.rs  contact.rs  events.rs  message.rs  mod.rs  settings.rs
src-tauri/src/services/: ai.rs  mod.rs  whatsapp.rs
src-tauri/src/storage/: ai_repo.rs  chat_repo.rs  contact_repo.rs  message_repo.rs  mod.rs  prompt_repo.rs  settings_repo.rs
src/main/bridge/: shadcn.js
src/main/components/ui/: sidebar.tsx
src/main/whatsauto/: core.cljs  db.cljs  effects.cljs  events.cljs  subs.cljs  tauri.cljs
src/main/whatsauto/interop/: icons.cljs  shadcn.cljs
src/main/whatsauto/views/: ai.cljs  app.cljs  automation.cljs  chats.cljs  contacts.cljs  leads.cljs  plugins.cljs  qr-login.cljs  qrlogin.cljs  settings.cljs  sidebar.cljs  translation.cljs  voice.cljs
