[package]
name = "whatsauto"
version = "0.1.0"
edition = "2021"
description = "AI-enhanced WhatsApp Business desktop client"
authors = ["Johannes Neugschwentner <johannes.neugschwentner@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "whatsauto_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-http = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "migrate", "chrono", "uuid"] }

# Async utilities
anyhow = "1"
thiserror = "1"
once_cell = "1"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Secure storage for secrets
keyring = "3"

# Logging
log = "0.4"
env_logger = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client for AI providers
reqwest = { version = "0.12", features = ["json", "stream"] }

# WebSocket (sidecar bridge)
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
